--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina con Header e Footer</title>
+    <title>User-centered design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.4/css/flag-icons.min.css">
@@ -42,7 +42,7 @@
 
     </main>
     <div class="content2">
-        <img src="image/vector.png" alt="team">        
+        <img src="image/Vector.png" alt="team">        
     </div>
     <div class="content3">
         <h2>User-Centered Design</h2>
