--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background: linear-gradient(90deg, #3b82f6, #8b5cf6);
             background-clip: text;
             -webkit-background-clip: text;
-            color: transparent;
+            color: white;
         }
         
         .pillars-grid {
