--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             background: linear-gradient(90deg, #3b82f6, #8b5cf6);
             background-clip: text;
             -webkit-background-clip: text;
+            color: transparent;
+        }
+
+         .gradient-text1 {
+            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+            background-clip: text;
+            -webkit-background-clip: text;
             color: white;
         }
         
@@ -110,7 +117,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0">
                     <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">
-                        <span class="gradient-text">Design Centrato sull'Utente</span><br>
+                        <span class="gradient-text1">Design Centrato sull'Utente</span><br>
                         nei Servizi Pubblici Digitali
                     </h1>
                     <p class="text-xl md:text-2xl mb-8 opacity-90">
