--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="https://www.istockphoto.com/it/foto/designer-team-disegno-sito-web-ux-app-applicazione-di-sviluppo-per-telefono-cellulare-gm1299122459-391846828" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
+                    <img src="https:/https://unsplash.com/photos/teamwork-graphic-designers-creative-drawing-website-ux-app-development-and-application-for-mobile-phone-in-the-office-j9mgwCIOCSc" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
                 </div>
             </div>
         </div>
