--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
+                    <img src="image/UX PHOTO 1.jpeg" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
                 </div>
             </div>
         </div>
