--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="UX PHOTO 1.jpeg" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
+                    <img src="image/UX PHOTO 1.jpeg" alt="Hero Image" class="rounded-lg shadow-2xl max-w-full h-auto floating object-cover" style="height: 350px;">
                 </div>
             </div>
         </div>
